--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "node ./node_modules/.bin/sassdoc . --config ./sassdoc.config.json",
+    "docs": "node ./node_modules/sassdoc/bin/sassdoc core --config ./sassdoc.config.json",
     "watch": "node ./node_modules/gulp/bin/gulp"
   },
   "repository": {
