--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "style": "core/_base-base.scss",
   "devDependencies": {
-    "sassdoc": "^2.3.0",
+    "bootstrap": "^4.1.1",
+    "cssgrid": "git+https://github.com/JayCarney/grid12.git",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.5.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.2.1",
+    "sassdoc": "^2.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
